--- a/styles/styles.css
+++ b/styles/styles.css
@@ -19,5 +19,125 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  background: #ecf2f8;
+}
+
+.card {
+  width: 90%;
+  max-width: 365px;
+  overflow: hidden;
+  border-radius: 1rem;
+  height: 80%;
+  margin: 0 auto;
+  background: white;
+  position: relative;
+}
+
+.card .hero img {
+  width: 100%;
+  height: 220px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: top;
+     object-position: top;
+}
+
+.card .card-body {
+  width: 85%;
+  height: 80%;
+  margin: 0 auto;
+  line-height: 1.2;
+}
+
+.card .card-body h3 {
+  color: #48556a;
+  padding-top: 1.5em;
+  font-weight: 700;
+}
+
+.card .card-body p {
+  color: #6d7f97;
+  padding: 1rem 0;
+}
+
+.card .profile {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 0.5em;
+}
+
+.card .profile .person img {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+}
+
+.card .profile .name h4 {
+  color: #48556a;
+  justify-self: flex-start;
+}
+
+.card .profile .name p {
+  padding: 0.25em 0;
+  color: #9eafc2;
+}
+
+.card .profile .share {
+  width: 35px;
+  height: 35px;
+  background: #ecf2f8;
+  border-radius: 50%;
+  z-index: 1;
+}
+
+.card .profile .share img {
+  -webkit-transform: translate(65%, 65%);
+          transform: translate(65%, 65%);
+}
+
+.card .social {
+  color: #ecf2f8;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  font-weight: lighter;
+  letter-spacing: 0.25em;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 70px;
+  width: 100%;
+  background: #48556a;
+  -webkit-transition: all 0.5s ease-in-out;
+  transition: all 0.5s ease-in-out;
+  -webkit-transform: translateX(-21rem);
+          transform: translateX(-21rem);
+}
+
+.card .social.active {
+  -webkit-transform: translateX(0rem);
+          transform: translateX(0rem);
+}
+
+.card .social p {
+  padding: 0 1em;
+}
+
+.card .social .twitter {
+  padding: 0 0.5em;
 }
 /*# sourceMappingURL=styles.css.map */
